Work in progress of revamping the FixCreatures usecase. Adding ItemRepository.